--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+        <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+        <script src="https://kit.fontawesome.com/a60fbf1630.js" crossorigin="anonymous"></script>
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% include "navbar.html.twig" %}
+        <div class="text-center">
+            {% block body %}{% endblock %}
+        </div>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
