--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -17,7 +17,7 @@
       </li>
     </ul>
     {% if is_granted('ROLE_ADMIN') %}
-    <a href="/logout"class="btn btn-secondary form-inline my-2 my-lg-0">Déconnexion</a>
+    <a href="/logout"class="btn btn-warning form-inline my-2 my-lg-0">Déconnexion</a>
     {%endif%}
   </div>
 </nav>
