--- a/templates/booklist/index.html.twig
+++ b/templates/booklist/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Liste des bookLists{% endblock %}
 
 {% block body %}
-<h1>Liste des bookLists créées</h1>
+<h1 class="m-4">Liste des booklists créées</h1>
 
-<table class="table">
+<table class="table table-striped table-hover">
 <thead>
     <tr>
         <th>Id</th>
@@ -29,7 +29,7 @@
         <td>{{booklist.creatorId.nickname}}</td>
         <td>{{booklist.createdAt | date('d/m/Y') }}</td>
         <td>
-            <a href="{{ path('booklist_delete', {'id': booklist.id}) }}" class="btn btn-danger"><i class="fas fa-ban"></i></a>
+            <a href="{{ path('booklist_delete', {'id': booklist.id}) }}" class="btn btn-warning"><i class="fas fa-ban"></i></a>
         </td>
     </tr> 
     {% endfor %}
