--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -3,26 +3,27 @@
 {% block title %}Liste des catégories{% endblock %}
 
 {% block body %}
-<h1>Liste des catégories disponibles</h1>
-<a href="{{ path('category_create') }}" class="btn btn-primary">Ajouter une nouvelle catégorie</a>
+<h1 class="m-4">Liste des catégories disponibles</h1>
+<a href="{{ path('category_create') }}" class="btn btn-warning mb-3">Ajouter une nouvelle catégorie</a>
 
-<table class="table">
-<thead>
-    <tr>
-        <th>Nom de la catégorie</th>
-        <th></th>
-    </tr>
-</thead>
-<tbody>
-    {% for category in categories %}
-    <tr>
-        <td>{{category.name }}</td>
-        <td>
-            <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-primary"><i class="fas fa-edit"></i></a>
-            <a href="{{ path('category_delete', {'id': category.id}) }}" class="btn btn-danger"><i class="fas fa-ban"></i></a>
-        </td>
-    </tr> 
-    {% endfor %}
-</tbody>
-</table>
+<div class="container d-flex justify-content-center">
+    <table class="table table-striped table-hover w-50">
+    <thead>
+        <tr>
+            <th colspan="2">Nom de la catégorie</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for category in categories %}
+        <tr>
+            <td>{{category.name }}</td>
+            <td>
+                <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-secondary"><i class="fas fa-edit"></i></a>
+                <a href="{{ path('category_delete', {'id': category.id}) }}" class="btn btn-warning"><i class="fas fa-ban"></i></a>
+            </td>
+        </tr> 
+        {% endfor %}
+    </tbody>
+    </table>
+</div>
 {% endblock %}
