--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -14,10 +14,10 @@
     </div>
 </div>
 
-<div class="container m-4">
-    <div class="row">
+<div class="container">
+    <div class="row mt-4">
         <div class="col">
-            <table class="table table-hover m-auto">
+            <table class="table table-striped table-hover m-auto">
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">Les 10 derniers utilisateurs enregistrés : </td>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col">
-            <table class="table table-hover m-auto">
+            <table class="table table-striped table-hover m-auto">
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">Les 10 dernières booklists créées : </td>
