--- a/templates/dashboard/login.html.twig
+++ b/templates/dashboard/login.html.twig
@@ -4,14 +4,18 @@
 
 {% block body %}
 
-    <h1>Connexion</h1>
-
-    {{ form_start(form) }}
-
-    {{ form_widget(form) }}
-
-    <button type="submit" class="btn btn-secondary">Connexion</button>
-
-    {{ form_end(form) }}
+    <div class="w-auto m-3 p-2">
+        <div class="m-auto card border-warning mb-3" style="max-width: 30rem;">
+            <h1 class="card-header">Connexion</h1>
+            <div class="card-body">
+                <div class="m-3 p-2">
+                    {{ form_start(form) }}
+                    {{ form_widget(form) }}
+                        <button type="submit" class="btn btn-warning mt-2">Connexion</button>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
