--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Liste des utilisateurs{% endblock %}
 
 {% block body %}
-<h1>Liste des utilisateurs enregistrés</h1>
+<h1 class="m-4">Liste des utilisateurs enregistrés</h1>
 
-<table class="table">
+<table class="table table-striped table-hover">
 <thead>
     <tr>
         <th>Id</th>
@@ -23,7 +23,7 @@
         <td>{{user.email}}</td>
         <td>{{user.registrationDate | date('d/m/Y') }}</td>
         <td>
-            <a href="{{ path('user_delete', {'id': user.id}) }}" class="btn btn-danger"><i class="fas fa-user-slash"></i></a>
+            <a href="{{ path('user_delete', {'id': user.id}) }}" class="btn btn-warning"><i class="fas fa-user-slash"></i></a>
         </td>
     </tr> 
     {% endfor %}
