--- a/templates/booklist/index.html.twig
+++ b/templates/booklist/index.html.twig
@@ -29,7 +29,7 @@
         <td>{{booklist.creatorId.nickname}}</td>
         <td>{{booklist.createdAt | date('d/m/Y') }}</td>
         <td>
-            <a href="{{ path('booklist_delete', {'id': booklist.id}) }}" class="btn btn-warning"><i class="fas fa-ban"></i></a>
+            <a href="{{ path('booklist_delete', {'id': booklist.id}) }}" class="btn btn-warning" onclick="return confirm('Etes-vous sûr de vouloir supprimer cette booklist ?')"><i class="fas fa-ban"></i></a>
         </td>
     </tr> 
     {% endfor %}
