--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -4,14 +4,18 @@
 
 {% block body %}
 
-<h1>Modification d'une catégorie existante</h1>
-
-{{ form_start(form) }}
-
-{{ form_widget(form) }}
-
-<button type="submit" class="btn btn-secondary">Modifier</button>
-
-{{ form_end(form) }}
+<div class="w-auto m-3 p-2">
+    <div class="m-auto card border-warning mb-3" style="max-width: 30rem;">
+        <h1 class="card-header">Modification d'une catégorie existante</h1>
+        <div class="card-body">
+            <div class="m-3 p-2">
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                    <button type="submit" class="btn btn-warning mt-2">Modifier</button>
+                {{ form_end(form) }}
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
