--- a/templates/dashboard/login.html.twig
+++ b/templates/dashboard/login.html.twig
@@ -10,6 +10,9 @@
         <div class="card-body">
             <div class="m-3 p-2">
                 {{ form_start(form) }}
+                {% if error %}
+                    <div class="alert alert-danger">{{ error }}</div>
+                {% endif %}
                 {{ form_widget(form) }}
                     <button type="submit" class="btn btn-warning mt-2">Connexion</button>
                 {{ form_end(form) }}
